--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
     permissions:
       packages: write
       contents: read
+      security-events: write
 
     steps:
     - name: 'Checkout GitHub Action'
@@ -29,4 +30,21 @@ jobs:
     - name: 'Build Inventory Image'
       run: |
         docker build . --tag ghcr.io/hector-e84/jupyter-test:latest
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+      with:
+        image-ref: 'ghcr.io/hector-e84/jupyter-test:latest'
+        format: 'template'
+        template: '@/contrib/sarif.tpl'
+        output: 'trivy-results.sarif'
+        severity: 'CRITICAL,HIGH'
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: 'trivy-results.sarif'
+
+    - name: 'Push Inventory Image'
+      run: |
         docker push ghcr.io/hector-e84/jupyter-test:latest
