--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,11 +34,10 @@ jobs:
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: 'ghcr.io/hector-e84/jupyter-test:latest'
-        format: 'template'
-        template: '@/contrib/sarif.tpl'
+        format: 'sarif'
         output: 'trivy-results.sarif'
         exit-code: '1'
-        timeout: '10m0s'
+        timeout: '30m0s'
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
