--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,8 @@ jobs:
     permissions:
       packages: write
       contents: read
+      security-events: write
+      actions: read
 
     steps:
     - name: 'Checkout GitHub Action'
